css/styles.css
/* ----- Estilos generales ----- */
@import url('https://fonts.cdnfonts.com/css/hastro');
@import url('https://fonts.cdnfonts.com/css/molendra');
@import url('https://fonts.cdnfonts.com/css/pacifico');
@import url('https://fonts.cdnfonts.com/css/balleny');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --background: rgb(44 44 44);
    --linkedin: rgb(10 102 194);
    --github: rgb(235 235 235);
    --twitter: rgb(29 155 240);
}

.bg-orange{
    background-color: rgb(255 160 44);
}

.gap-10{
    gap: 10vw;
}

.text-active{
    font-weight: 500;
    color: rgb(235 235 235);
}

.text-molendra{
    font-family: Molendra, sans-serif;
}

.text-pacifico{
    font-family: Pacifico, sans-serif;
}

.text-balleny{
    font-family: Balleny, sans-serif;
}

.red-custom{
    color: rgb(218 43 31);
}

.content{
    padding: 30px;
}

.sticky{
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}

.sticky + .content {
    padding-top: 60px;
}

.navbar{
    z-index: 2;
}

.width-95{
    width: 95%;
}

.img-steps-recipe:hover{
    cursor: pointer;
}

.toggle-z-index{
    z-index: 1050;
}

.overlay{
    width:100%;
    height:100%;
    position:absolute;
    background-color:rgb(24 24 24);
    opacity: 0.5;
    border-radius:30px;
}

.d-none-custom{
    display: none;
}

.mt-5-cm {
    margin-top: 3rem;
}

.px-4-cm {
    padding-right: 1.5rem;
    padding-left: 1.5rem;
}

.py-4-cm {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

.pe-5-cm {
    padding-right: 3rem;
}

.mx-5-cm {
    margin-right: 3rem;
    margin-left: 3rem;
}

/* ----- Header ----- */
#header-image{
    width: 100%;
    height: 300px;
    background-image: url("../assets/bg-header.jpg");
    background-size: 100%;
    background-position-y: 5%;
    background-repeat: no-repeat;
}

#header-image > h1{
    color: white;
    position: absolute;
    top: 115px;
    left: 125px;
    font-family: Hastro, sans-serif;
    font-size: 64px;
}

#container-navlogo > a{
    display: flex;
    gap: 0.5vw;
    color: rgb(255 255 255);
    font-weight: 500;
}

.col-12 p:nth-child(2){
    margin-top: 20px;
}

#container-navlogo p{
    margin-bottom: 0;
    padding-top: 8px;
    font-size: 19px;
}

#contenedor-textmenu .nav-link{
    font-size: 19px;
    color: rgb(255 255 255);
    border-radius: 8px;
}

.social-media-button img {
    transition: all 0.3s;
}

.icon-git img{
    width: 44px;
    height: 44px;
    padding: 4px;
}

.carousel-item > img{
    filter: brightness(50%);
}

.social-media-button:hover img {
    transform: scale(1.15);
}

#contenedor-svglogo > img,
#container-navlogo p{
    border-radius: 8px;
}

#imagen-principal > img{
    width: 65vw;
}

.navlogo-img{
    width: 35px;
    height: 40px;
}

.offcanvas, .modal, .fade{
    transition: ease-in-out 0.35s;
}

#contenedor-svglogo > svg:hover{
    cursor: pointer;
    background-color: rgb(221 139 38);
    stroke: black;
}

.offcanvas-body{
    padding-top: 180px;
    padding-right: 6vw;
    background-image: url("../assets/food-bg1.png");
    background-size: cover;
    background-repeat: no-repeat;
    color: rgb(231 143 36);
    font-weight: 600;
    font-size: 18px;
}

.offcanvas-body form {
    margin-bottom: 18px;
}

#offcanvas-buttons{
    margin-left: 0.25vw;
}

.btn-98 {
    background-image: none;
    margin-bottom: 10px;
    border-top: none;
    border-right: none;
    border-left: none;
    color: rgb(231 143 36);
    border-bottom: 3px solid rgb(255 174 74);

    --thickness: 3px;

    box-sizing: border-box;
    clip-path: polygon(
        0 0,
        100% 0,
        100% calc(100% + var(--thickness)),
        0 calc(100% + var(--thickness))
    );
    display: block;
    font-weight: 900;
    padding: 2px 0;
    position: relative;
    text-transform: uppercase;
}

.btn-98::before {
    background: white;
    bottom: calc(var(--thickness) * -1);
    content: "";
    display: block;
    height: var(--thickness);
    position: absolute;
    width: 100%;
}

.btn-98:hover::before {
    animation: slide 0.5s ease;
}

@keyframes slide {
    0% {
        transform: translateX(0);
    }

    50% {
        transform: translateX(100%);
    }

    51% {
        transform: translateX(-100%);
    }

    100% {
        transform: translateX(0);
    }
}

/* ----- Main ----- */

body{
    background-image: url("../assets/background-repeat.jpg");
    background-repeat: repeat;
    background-size: 650px;
}

#imagen-principal{
    display: flex;
    justify-content: center;
}

#main-carrousel > h2{
    margin-top: 15px;
    margin-bottom: 20px;
    text-align: center;
    font-size: 55px;
}

#contenedor-carrousel,
#imagen-principal,
#main-video{
    margin: 35px auto;
}

.carousel-item{
    transition: linear .30s;
}

.comida-veg,
.comida-ita,
.comida-arg,
.comida-fran{
    border-radius: 5px;
    height: 500px;
}

#contenedor-quecocinar-titulo{
    gap: 20px;
}

#main-cards{
    margin: 25px initial;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 15px;
    padding-left: 20vw;
    padding-right: 20vw;
}

#main-cards .card{
    width: 13vw;
    transition: all 0.35s;
}

#contenedor-cards-recetas .card{
    width: 15vw;
    height: 325px;
    transition: all 0.45s;
}

#main-cards .card:hover{
    cursor: pointer;
    transform: scale(1.03);
}

#main-cards .card-img-top{
    width: auto;
    height: 200px;
}

#contenedor-cards-recetas .card-body{
    text-align: center;
    padding-top: 5px;
}

#main-cards .card > .card-body{
    display: flex;
    gap: 20px;
    padding-bottom: 10px;
}

#contenedor-cards-recetas .card-body h5{
    font-size: 18px;
}

#main-cards .card > .card-body h5{
    font-size: 15px;
}

#main-video > h3{
    text-align: center;
    margin-bottom: 35px;
}

#main-video iframe{
    width:670px;
    height:375px;
    border: 4px solid rgb(37 37 37);
    border-radius: 8px;
}

/* ----- Footer ----- */

#contenedor-footer{
    height: 300px;
    padding-top: 50px;
}

#container-logofooter > a{
    display: flex;
    gap: 0.5vw;
    color: rgb(255 255 255);
    font-weight: 500;
}

#container-navlogo > a:link{
    text-decoration: none;
}

#container-logofooter > a:link{
    text-decoration: none;
}

#container-logofooter p{
    margin-bottom: 0;
    padding-top: 8px;
    border-radius: 8px;
    transition: all 0.45s;
    font-size: 24px;
}

#footer-nombre > p{
    margin-bottom: 0;
    color: rgb(255 255 255);
}

#contenedor-texto-quienessomos p{
    font-size: 17px;
}

#contenedor-textmenu .nav-link:hover,
#container-navlogo p:hover{
    color: rgb(39 39 39);
}

#footer-nombre .text-balleny{
    transition: all 0.45s;    
}

#container-logofooter p:hover,
#footer-nombre .text-balleny:hover{
    color: rgb(39 39 39);
    cursor: pointer;
}

#contenedor-footer .col-4{
    display: flex;
    justify-content: center;
}

.social-media-buttons{
    display: flex;
    justify-content: end;
    flex-wrap: wrap;
    gap: 24px;
    margin-right: 5vw;
}

.social-media-button{
    width: 48px;
    height: 48px;
    border-radius: 50%;
    outline: 2px solid white;
    cursor: pointer;
    transition: all 0.3s;
    display: grid;
    place-items: center;
}

.social-media-button:hover {
    outline-offset: 3px;
    transition: all 0.3s;
}

.social-media-button:hover:nth-child(1) {
    background:  radial-gradient(
        circle at 30% 107%, rgb(253 244 151) 0%, 
        rgb(253 244 151) 5%, rgb(253 89 73) 45%,
        rgb(214 36 159) 60%,rgb(40 90 235) 90%
    ); 
}

.social-media-button:hover:nth-child(2) {
    background-color: var(--twitter);
}

.social-media-button:hover:nth-child(3) {
    background-color: var(--background);
}

.social-media-button:hover:nth-child(4) {
    background-color: var(--linkedin);
}

#contenedor-svglogo > img:hover{
    cursor: pointer;
}

#contenedor-footer .col-12{
    padding-left: 11vw;
    margin-top: 20px;
    font-weight: 500;
}

#footer-nombre{
    display: flex;
    justify-content: end;
    padding-right: 5vw;
}



/* ----- Recetas ----- */

#contenedor-main h2{
    font-size: 40px;
    margin-top: 35px;
    margin-bottom: 35px;
    margin-left: 35px;
}

.divisor{
    width: 17vw;
    margin-top: 10px;
    margin-bottom: 10px;
    border: 1px solid rgb(207 207 207);
}

#buscador-container {
    display: flex;
    justify-content: center;
    gap: 8px;
}

#buscador-input{
    height: 35px;
    width: 12vw;
    border-radius: 10px;
    margin-top: 2px;
}

#container-control-cards{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 325px;
    margin-left: 2vw;
    padding: 2vw 40px;
    border-style: solid;
    border-width: 1px;
    border-color: rgb(207 207 207);
    border-radius: 5px;
    background-color: rgb(245 245 245);
}

#contenedor-paginacion{
    display: flex;
    margin-top: 75px;
    margin-bottom: 75px;
    gap: 10vw;
    justify-content: center;
}

#contenedor-cards-recetas .card:hover{
    cursor: pointer;
    transform: scale(1.05);
}

#contenedor-cards-recetas .card-img-top{
    width: 14.9vw;
    height: 225px;
}

/* ----- Contacto ----- */

#contenedor-contacto-img{
    padding-left: 80px;
}

#img-contactanos{
    width: 550px;
    border-radius: 8px;
}

#title-form, #title-map{
    font-size: 40px;
}

#form-contacto{
    background-color: rgba(255 255 255 / 50%);
    margin-top: 40px;
}

#contenedor-form-boton{
    margin-top: 20px;
    display: flex;
    justify-content: end;
}

/* About us */

.reset-pl{
    padding-left: 0;
}

#img-acercade{
    width: 40vw;
}

#contenedor-map{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 35px;
}

#map-contacto{
    width: 50%;
    height: 350px;
}

